RESOLVED FIXED186357
REGRESSION (r232301) - Unable to enter video fullscreen
https://bugs.webkit.org/show_bug.cgi?id=186357
Summary REGRESSION (r232301) - Unable to enter video fullscreen
Jer Noble
Reported 2018-06-06 10:38:07 PDT
REGRESSION (r232301) - Unable to enter video fullscreen
Attachments
Patch (1.82 KB, patch)
2018-06-06 10:48 PDT, Jer Noble
jonlee: review+
jer.noble: commit-queue+
Jer Noble
Comment 1 2018-06-06 10:40:00 PDT
Jer Noble
Comment 2 2018-06-06 10:48:08 PDT
Jeremy Jones
Comment 3 2018-06-06 10:51:33 PDT
Provisional r=me.
Jeremy Jones
Comment 4 2018-06-06 10:51:58 PDT
Provisional r=me.
Jeremy Jones
Comment 5 2018-06-06 10:53:29 PDT
Comment on attachment 342062 [details] Patch Provisional r=me.
Jer Noble
Comment 6 2018-06-06 11:02:31 PDT
Note You need to log in before you can comment on or make changes to this bug.