Cherry-pick r232548. rdar://problem/40838449

REGRESSION (r232301) - Unable to enter video fullscreen
    https://bugs.webkit.org/show_bug.cgi?id=186357
    <rdar://problem/40838449>

    Reviewed by Jon Lee.

    Only set up the standby fullscreen element if we are in element fullscreen.

    * WebProcess/FullScreen/WebFullScreenManager.cpp:
    (WebKit::WebFullScreenManager::videoControlsManagerDidChange):

    Canonical link: https://commits.webkit.org/201729@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232548 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/201716.3@tags/Safari-606.1.20/Source/WebKit
git-svn-id: https://svn.webkit.org/repository/webkit/tags/Safari-606.1.20@232554 268f45cc-cd09-0410-ab3c-d52691b4dbfc